--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
-<html><head> 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style.css" type="text/css"> 
-   </head> 
-   <body> 
-    <h1 class="number">0</h1> 
-    <div class="btns"> <button class="btn btn-decrement">-1</button> <button class="btn btn-increment">+1</button> 
-    </div> 
-    <script src="/script.js"></script> 
-   
-  </body></html>
+<!DOCTYPE html>
+<html>
+<head> 
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/style.css" type="text/css"> 
+</head> 
+<body>
+  <h1 class="number">0</h1> 
+  <div class="btns">
+    <button class="btn btn-decrement">-1</button>
+    <button class="btn btn-increment">+1</button> 
+  </div> 
+<script src="/script.js"></script> 
+</body>
+</html>
